# School-Projects

./: README.md
lab330_decision_trees-master/: ASSIGNMENT.md  README.md
lab330_knn-master/: ASSIGNMENT.md  README.md
lab330_naive_bayes-master/: ASSIGNMENT.md  README.md
lab330_neural_network-master/: ASSIGNMENT.md  README.md  requirements.txt
math215/: Homework_1-1.Rmd  Homework_1-2.Rmd  Homework_1-3.Rmd  Homework_10-1.Rmd  Homework_10-2.Rmd  Homework_11-1.Rmd  Homework_11-2.Rmd  Homework_11-3.Rmd  Homework_11-4.Rmd  Homework_12.Rmd  Homework_13.Rmd  Homework_14.Rmd  Homework_2-1.Rmd  Homework_2-2.Rmd  Homework_2-3.Rmd  Homework_3-1.Rmd  Homework_3-2.Rmd  Homework_3-3.Rmd  Homework_4-1.Rmd  Homework_4-2.Rmd  Homework_4-3.Rmd  Homework_5.Rmd  Homework_6-1.Rmd  Homework_6-1.html  (+9 more)
team-6---cptr142-project-3-master/: CMakeLists.txt  GRADE.md  pull.sh
team-6---cptr142-project-3-master/assignment_files/: README.md
team-6---cptr142-project-3-master/docs/: PROPOSAL.md  UML and Timeline.md  _config.yml  index.md
team-6---cptr142-project-3-master/scratch/: exceptions.cpp  sort_lists.cpp  string.cpp  time_loop.cpp
team-6---cptr142-project-3-master/src/: CPPLINT.cfg
team-6---cptr142-project-3-master/src/main/: Fruit.cpp  Fruit.h  Game.cpp  Game.h  Player.cpp  Player.h  Snake.cpp  Snake.h  Type.cpp  Type.h  main.cpp  main_func.cpp  main_func.h
team-6---cptr142-project-3-master/src/test/: GameTest.cpp  SnakeTest.cpp  test_main.cpp
team-6---cptr142-project-3-master/storage/: MediumLeaderboard.txt
team-6---cptr142-project-3-master/storage/players/: luke.txt
(+194 files in other folders)
